projects/vb6parse/snapshots/parsers/cst/library/file/loc/loc_parentheses.snap
---
source: projects/vb6parse/tests/library/file/loc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: pos
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: ParenthesizedExpression
          children:
            - kind: LeftParenthesis
              text: (
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Loc
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: fileNum
                - kind: RightParenthesis
                  text: )
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
